hra/patternlab/site/sass/atoms/_table.scss
/*------------------------------------*\
    $TABLE
\*------------------------------------*/

.table {
    @include font-size(milli);
    width: 100%;
    margin: 10px 0;
    text-align: left;
    border-spacing: 0;

    thead {
        color: #fff;
        background-color: $color--primary;

        td {
            border: 1px solid #0f549a;

            a {
                color: #fff;
            }
        }
    }

    th,
    td {
        padding: 15px 25px;
    }

    td {
        border: 1px solid #f2f2f2;

        a {
            color: $color--link;
            text-decoration: underline;

            &:hover {
                text-decoration: none;
            }
        }
    }
}

.table--pinned {
    display: flex;
    max-width: 100%;
    overflow: hidden;
    white-space: nowrap;
    vertical-align: top;
    background: radial-gradient(ellipse at left, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 75%) 0 center, radial-gradient(ellipse at right, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 75%) 100% center;
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-size: 10px 100%;
    border-collapse: collapse;
    border-spacing: 0;

    // sass-lint:disable no-misspelled-properties, no-vendor-prefixes
    -webkit-overflow-scrolling: touch;

    tbody {
        display: flex;
        overflow-x: auto;
        overflow-y: hidden;
    }

    thead {
        display: flex;
        flex-shrink: 0;
        min-width: min-content;
    }

    tr {
        display: flex;
        flex-direction: column;
        flex-shrink: 0;
        min-width: min-content;
    }

    td,
    th {
        display: block;
    }

    td {
        // sass-lint:disable no-important
        background-image: none !important;
        border-left: 0;
    }

    th:not(:last-child),
    td:not(:last-child) {
        border-bottom: 0;
    }
}

.table-navigation {
    margin: 50px 0 15px;

    @include media-query(mobile) {
        margin: 30px 0 -15px;
    }

    &__heading {
        @include font-size(delta);
        color: $color--primary;
        text-align: center;
    }

    &__button {
        position: relative;
        width: 40px;
        height: 40px;
        cursor: pointer;
        background-color: transparent;
        border: 2px solid $color--quinary;
        border-radius: 50%;

        @include media-query(mobile) {
            display: none;
        }

        &::before {
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            width: 14px;
            height: 16px;
            margin: auto;
            background: {
                size: cover;
                image: url('../images/svg/purple-arrow.svg');
            }
            content: '';
            transition: transform $default-transition-speed ease;
        }

        &:focus {
            outline: 0;
        }

        &--left {
            &::before {
                transform: rotate(90deg);
            }

            &:hover {
                &::before {
                    transform: rotate(90deg) translate3d(0, 3px, 0);
                }
            }
        }

        &--right {
            float: right;

            &::before {
                transform: rotate(-90deg);
            }

            &:hover {
                &::before {
                    transform: rotate(-90deg) translate3d(0, 3px, 0);
                }
            }
        }
    }
}

